--- a/DesignPrinciples/DesignPrinciples.csproj
+++ b/DesignPrinciples/DesignPrinciples.csproj
@@ -2,13 +2,13 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Encapsulate What Varies\Encapsulate What Varies.csproj" />
+    <ProjectReference Include="..\Favor Composition over Inheritance\Favor Composition over Inheritance.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
   </PropertyGroup>
 
 </Project>
